Fixed overflow issues

--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -39,6 +39,7 @@
     display: grid;
     grid-template-columns: 100px auto;
     column-gap: 62px;
+    grid-template-rows: min-content auto auto;
   }
 }
 
@@ -181,8 +182,6 @@
   box-sizing: border-box;
   width: 32px;
   height: 10px;
-  top: 50%;
-  transform: translateY(-50%);
   mask-image: url("../../images/icons/stack.svg#arrow-icon");
   mask-size: contain;
   mask-position: -8px;
@@ -191,10 +190,12 @@
   transition: 0.2s ease-in-out;
 
   @include mobile {
+    bottom: 3px;
     margin-left: 15px;
   }
 
   @include tablet {
+    bottom: 10px;
     margin-left: 25px;
   }
 }
